--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ setInterval(changeBackground, 4000);
   </script> 
   <style>
     #top {
-        background-image: url("/IBsite/headerimages/headimage%20(1).jpg");
+        background-image: url("/headerimages/headimage%20(1).jpg");
         background-size: cover;
         height: 100vh;
         display: flex;
