--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ z-index: 111;
 <script>
 var imagesArray = [];
 $.ajax({
-    url: 'headerimages/',
+    url: '/headerimages/',
     success: function (data) {
         // Find all the <a> tags in the response and add the href attribute to the imagesArray
         $(data).find("a").attr("href", function (i, val) {
@@ -113,7 +113,8 @@ setInterval(changeBackground, 4000);
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 1;
-        width: 50%;
+        max-width:  80%;
+        max-height: 80%;
     }
 </style>
 </head>
