--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ $(document).ready(function() {
   </script> 
   <style>
     #top {
-        background-image: url("/headerimages/headimage%20(1).jpg");
+        background-image: url("headerimages/headimage%20(1).jpg");
         background-size: cover;
         height: 100vh;
         display: flex;
