--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@ $(document).ready(function() {
         async: true  // Make the AJAX call synchronous to ensure that the imagesArray is populated before the code continues
     });
 
-    function changeBackground(){
-        console.log(imagesArray[parseInt(Math.random()*imagesArray.length)])
-        $("#top").css("background-image" , "url("+ imagesArray[parseInt(Math.random()*imagesArray.length)] +")");      
-    };
+    function changeBackground() {
+    var randomIndex = Math.floor(Math.random() * imagesArray.length);
+    var randomImage = imagesArray[randomIndex];
+    console.log(randomImage); // Print the selected image to the console
+    $("#top").css("background-image", "url(" + randomImage + ")");
+};
 
     setInterval(changeBackground, 4000);
 
