--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ z-index: 111;
 
         <!-- Text overlay on image for small screens -->
         <div class="d-md-none position-relative">
-          <img src="conquest.jpg" style="padding: 10px" class="card-img img-fluid" alt="Image">
+          <img src="Conquest.jpg" style="padding: 10px" class="card-img img-fluid" alt="Image">
         </div>
       </div>
     </div>
@@ -224,7 +224,7 @@ z-index: 111;
     <!-- Column with image -->
     <div class="col-md-6 d-none d-md-block inverted-div">
       <div class="image-wrapper">
-        <img src="aboutinfo.jpg" class="card-img img-fluid" alt="Image">
+        <img src="Conquest.jpg" class="card-img img-fluid" alt="Image">
       </div>
     </div>
   </div>
