--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@ gtag('set', {'user_id': 'USER_ID'}); // Set the user ID using signed-in user_id.
     
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>    <meta http-equiv="X-UA-Compatible" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="2019 Australian Election, Australian Election Results,Australian Election Map,Election Map,Election Results Map, How did we vote, 2019 election results,Scott Morrision Election, 2019 election resuts, 2019 australian election map, 2019 Australian Federal Election, australia votes"> 
-    <meta name="title" content="How did we vote? - A detailed breakdown of Australia's election">
-    <meta name="description" content="An Incredily detailed series of maps detialing how australia voted, see how your community voted">
+    <meta name="keywords" content="Inward Bound ,Adventure Race, IB, ANU Inward Bound, IB2023, Endpoint"> 
+    <meta name="title" content="Inward Bound">
+    <meta name="description" content="Inward Bound is a unique adventure footrace, challenging the physical and emotional endurance of participants and providing safe and exciting opportunity to explore the Australian wilderness.">
     <meta name="author" content= "Jack Larkin">
-    <meta name="og:title" content="How did we vote? - A detailed breakdown of Australia's election">
-    <meta name="og:description" content="An Incredily detailed series of maps detialing how australia voted, see how your community voted">
+    <meta name="og:title" content="Inward Bound">
+    <meta name="og:description" content="Inward Bound is a unique adventure footrace, challenging the physical and emotional endurance of participants and providing safe and exciting opportunity to explore the Australian wilderness.">
     <title>Inward Bound</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
